fixed up a lot of the grays and some fixes for dark mode, some tweaking still needed

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,6 @@
 // Grays
 $gray: #808080;
 
-$gray-lightest: lighten($gray, 38%);
 $gray-darkest: darken($gray, 38.5%);
 
 // Secondary
