--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -1,49 +1,62 @@
 .theme-light {
   background-color: $white;
-  color: $gray-darkest;
+  color: $studio-gray-60;
 
   .theme-color-bg {
     background-color: $white;
   }
   .theme-color-bg-lighter {
-    background-color: lighten($gray, 30%);
+    background-color: $white;
   }
   .theme-color-fg {
-    color: $gray-darkest;
+    color: $studio-gray-80;
   }
   .theme-color-fg-dim {
-    color: darken($gray, 20%);
+    color: $studio-gray-50;
   }
   .theme-color-border {
-    border-color: lighten($gray, 40%);
+    border-color: $studio-gray-5;
   }
   .search-field {
-    border-color: lighten($gray, 40%);
+    border-color: $studio-gray-5;
   }
 }
 
 .theme-dark {
-  background-color: $gray-darkest;
-  color: $studio-gray-50;
+  background-color: $studio-gray-90;
+  color: $studio-gray-20;
 
   .theme-color-bg {
-    background-color: $gray-darkest;
+    background-color: $studio-gray-90;
   }
   .theme-color-bg-lighter {
-    background-color: darken($gray, 20%);
+    background-color: $studio-gray-90;
   }
   .theme-color-fg {
-    color: lighten($gray, 45%);
+    color: $white;
   }
   .theme-color-fg-dim {
-    color: lighten($gray, 9.9%);
+    color: $studio-gray-30;
   }
   .theme-color-border {
-    border-color: darken($gray, 30%);
+    border-color: $studio-gray-80;
   }
 
   .search-field {
-    border-color: darken($gray, 30%);
+    border-color: $studio-gray-60;
+
+    ::-moz-placeholder { /* Firefox 19+ */
+      color: $studio-gray-30;
+    }
+    ::webkit-input-placeholder { /* IE 10+ */
+      color: $studio-gray-30;
+    }
+    :-ms-input-placeholder { /* IE 10+ */
+      color: $studio-gray-30;
+    }
+    :-moz-placeholder { /* Firefox 18- */
+      color: $studio-gray-30;
+    }
   }
 
   ::-webkit-scrollbar-thumb {
